--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -70,8 +70,8 @@
 
 @layer components {
   .focus-overlay {
-    @apply fixed inset-0 bg-neutral-900/90 z-40;
-    -webkit-backdrop-filter: blur(2px);
-    backdrop-filter: blur(2px);
+    @apply fixed inset-0 bg-black/80 z-40;
+    -webkit-backdrop-filter: blur(4px);
+    backdrop-filter: blur(4px);
   }
 }
